src/main/java/org/example/moviesplatform/error/model/ReviewNotFoundException.java
package org.example.moviesplatform.error.model;

public class ReviewNotFoundException extends RuntimeException {
    public ReviewNotFoundException(String message) {
        super(message);
    }
}